--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -23,13 +23,13 @@
           <h1>LOGO</h1>
           <div class="links">
             <a href="">Home</a>
-            <a href="">About</a>
+            <a href="#about">About</a>
 
-            <a href="">Service</a>
-            <a href="">Portfolio</a>
-            <a href="">Team</a>
+            <a href="#service">Service</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#team">Team</a>
             <a href="">Dropdown</a>
-            <a href="">Contact</a>
+            <a href="#contact">Contact</a>
           </div>
 
           <button class="dugme" type="submit">Get Started</button>
@@ -73,7 +73,7 @@
       </div>
 
       <main>
-        <div class="main1">
+        <div class="main1" id="about">
           <h3 class="about">ABOUT</h3>
           <h1>LEARN ABOUT US</h1>
 
@@ -163,7 +163,7 @@
           </div>
         </div>
 
-        <div class="main3">
+        <div class="main3" id="service">
           <h3 class="service">SERVICES</h3>
           <h1>CHECK OUR SERVICES</h1>
           <div class="kartice">
@@ -228,7 +228,7 @@
           <button type="submit">Call To Action</button>
         </div>
 
-        <div class="main4">
+        <div class="main4" id="portfolio">
           <h3 class="portfolio">PORTFOLIO</h3>
           <h1>CHECK OUR PORTFOLIO</h1>
 
@@ -345,7 +345,7 @@
           </p>
         </div>
 
-        <div class="team">
+        <div class="team" id="team">
           <div>
             <h3 class="h3-team">TEAM</h3>
             <h1>CHECK OUR TEAM</h1>
@@ -353,54 +353,104 @@
 
           <div class="ljudi">
             <div class="covek1">
-              <div class="image">
-                <img
-                  src="./handsome-young-guy-casual-clothing.jpg"
-                  alt=""
-                  width="100%"
-                />
-                <!-- <i class="fa-brands fa-facebook"></i>
+              <div class="slika3">
+                <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-twitter"></i>
                 <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-linkedin"></i> -->
+                <i class="fa-brands fa-linkedin"></i>
               </div>
+
               <div style="padding: 10px">
                 <h3>Walter White</h3>
                 <p>Chief Executive Officer</p>
               </div>
             </div>
             <div class="covek2">
-              <img
-                src="./smiling-business-woman-with-folded-hands-toothy-smile-crossed-arms (1).jpg"
-                alt=""
-                width="100%"
-              />
+              <div class="slika3">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+
               <div style="padding: 10px">
                 <h3>Sarah Johnson</h3>
                 <p>Product Manager</p>
               </div>
             </div>
             <div class="covek3">
-              <img
-                src="./smiling-male-entrepreneur-with-beard-mustache-crossing-arms-chest.jpg"
-                alt=""
-                width="100%"
-              />
+              <div class="slika3">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+
               <div style="padding: 10px">
                 <h3>Wiliam Anderson</h3>
                 <p>CTO</p>
               </div>
             </div>
             <div class="covek4">
-              <img
-                src="./confident-middle-aged-woman-portrait.jpg"
-                alt=""
-                width="100%"
-              />
+              <div class="slika3">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+
               <div style="padding: 10px">
                 <h3>Amanda Jenson</h3>
                 <p>Accountant</p>
               </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="main6" id="contact">
+          <div class="footer">
+            <div class="col1">
+              <h3>GP</h3>
+              <div>
+                <p>Stevana Nemanje 47</p>
+                <p>Novi Pazar 36300</p>
+              </div>
+              <div>
+                <p><strong>Phone</strong>: +381 63 842 42 88</p>
+                <p><strong>Email</strong>:hsaladin06@gmail.com</p>
+              </div>
+            </div>
+            <div class="col2">
+              <h3>Useful Links</h3>
+              <a href="">Home</a>
+              <a href="">About us</a>
+              <a href="">Services</a>
+              <a href="">Terms of services</a>
+              <a href="">Privacy policy</a>
+            </div>
+            <div class="col3">
+              <h3>Our services</h3>
+              <a href="">Web design</a>
+              <a href="">Web development</a>
+              <a href="">Product managment</a>
+              <a href="">Marekting</a>
+              <a href="">Graphic design</a>
+            </div>
+            <div class="col4">
+              <h3>Our newsletter</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
+                deserunt!
+              </p>
+              <div>
+                <input type="text" />
+                <button type="submit">Submit</button>
+              </div>
+            </div>
+
+            <div class="red2">
+              <p>Copyright GP.All rights reserved</p>
+              <p>Designed by Saladin Hodzic</p>
             </div>
           </div>
         </div>
