--- a/html/Vezba/neki sajt/index.html
+++ b/html/Vezba/neki sajt/index.html
@@ -7,21 +7,31 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
-      <h1>Logo</h1>
-      <!-- <input type="text" /> -->
-      <div class="links">
-        <a href="">About</a>
-        <a href="">Portfolio</a>
+    <div class="wrapper">
+      <header>
+        <h1>Logo</h1>
+        <!-- <input type="text" /> -->
+        <div class="links">
+          <a href="">About</a>
+          <a href="">Portfolio</a>
 
-        <div class="dropdown">
-          <button class="link">Dropdown</button>
-          <div class="dropdown-menu">Dropdown Content</div>
+          <div class="dropdown">
+            <button class="link">Dropdown</button>
+            <div class="dropdown-menu">Dropdown Content</div>
+          </div>
+          <a href="">Contact</a>
+          <button class="slide">Get Started</button>
         </div>
-        <a href="">Contact</a>
-        <button class="slide">Get Started</button>
-      </div>
-    </header>
-    <div class="loptica"></div>
+      </header>
+
+      <main>
+        <div class="text">
+          <h1>
+            Galaksija je ogroman skup od više stotina hiljada zvezda u svemiru.
+          </h1>
+        </div>
+      </main>
+      <img src="./sunce.png" alt="" />
+    </div>
   </body>
 </html>
