--- a/javascript/Vezba/Booleans/vezba.html
+++ b/javascript/Vezba/Booleans/vezba.html
@@ -34,6 +34,14 @@
       } else {
         console.log("No discount");
       }
+
+      const godina = 6;
+
+      if (godina <= 5) {
+        alert("Ajsa je mala beba");
+      } else {
+        alert("Ajsa je bika");
+      }
     </script>
   </body>
 </html>
