Local Storage,JSON

--- a/javascript/Vezba/Objects/rockpaperscissors.html
+++ b/javascript/Vezba/Objects/rockpaperscissors.html
@@ -52,11 +52,7 @@ playGame('scissors');
     </button>
 
     <script>
-      const score = {
-        wins: 0,
-        losses: 0,
-        ties: 0,
-      };
+      const score = JSON.parse(localStorage.getItem("score"));
 
       function playGame(myMove) {
         const computerMove = pickComputerMove();
@@ -96,6 +92,8 @@ playGame('scissors');
         } else if (result === "Tie.") {
           score.ties += 1;
         }
+
+        localStorage.setItem("score", JSON.stringify(score));
 
         alert(`You chose ${myMove}.Computer chose ${computerMove}.${result}
 Wins: ${score.wins},Losses: ${score.losses},Ties: ${score.ties}`);
