--- a/javascript/Vezba/Objects/rockpaperscissors.html
+++ b/javascript/Vezba/Objects/rockpaperscissors.html
@@ -46,14 +46,28 @@ playGame('scissors');
     score.losses=0;
     score.ties=0
 
+    localStorage.removeItem('score')
+
+
     "
     >
       Reset Score
     </button>
 
     <script>
-      const score = JSON.parse(localStorage.getItem("score"));
+      let score = JSON.parse(localStorage.getItem("score")) || {
+        wins: 0,
+        losses: 0,
+        ties: 0,
+      };
 
+      // if (!score) {
+      //   score = {
+      //     wins: 0,
+      //     losses: 0,
+      //     ties: 0,
+      //   };
+      // }
       function playGame(myMove) {
         const computerMove = pickComputerMove();
         result = "";
