--- a/javascript/Vezba/Objects/coin-flip.html
+++ b/javascript/Vezba/Objects/coin-flip.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        background-color: bisque;
+      }
+      button {
+        background-color: rgb(227, 32, 64);
+        color: #fff;
+        border-radius: 10px;
+        font-size: 2.5em;
+        border: 1px solid rgb(155, 18, 41);
+        cursor: pointer;
+      }
+      button:nth-of-type(3) {
+        margin-left: 1em;
+        font-size: 1.5em;
+      }
+    </style>
   </head>
   <body>
     <button
