--- a/javascript/Vezba/JS,CSS,HTML/vezba.html
+++ b/javascript/Vezba/JS,CSS,HTML/vezba.html
@@ -12,5 +12,31 @@
     <button class="request">Request now</button>
     <button class="for-later">Schedule for later</button>
     <button class="js-button">test</button>
+    <button
+      onclick="
+      turnButtonOn('.gaming')
+   
+    "
+      class="is-toggled gaming"
+    >
+      Gaming
+    </button>
+    <button
+      onclick="
+turnButtonOn('.music')
+    "
+      class="is-toggled music"
+    >
+      Music
+    </button>
+    <button
+      onclick="
+turnButtonOn('.tech')
+ 
+    "
+      class="is-toggled tech"
+    >
+      Tech
+    </button>
   </body>
 </html>
