--- a/javascript/Domaci zadatak/for-petlja.html
+++ b/javascript/Domaci zadatak/for-petlja.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      a {
+        border-bottom: 1px solid black;
+      }
+      a:hover {
+        border-bottom: 1px dashed black;
+      }
+    </style>
   </head>
   <body>
+    <a>Storyline 360</a>
     <script>
       // Domaci:
       // 1.
@@ -18,27 +27,57 @@
       // Ispisati sve brojeve od 50 do 100 koji su deljivi sa 5.
 
       //   1.
-      for (let i = 1; i <= 20; i++) {
-        if (i % 2 !== 0) {
-          console.log(i);
-        }
-      }
-      //   2.
+
+      //   for (let i = 1; i <= 20; i++) {
+      //     if (i % 2 !== 0) {
+      //       console.log(i);
+      //     }}
+
+      //   for (let i = 1; i < 20; i += 2) {
+      //     console.log(i);
+      //   }
+
       for (let i = 1; i <= 20; i++) {
         if (i % 2 === 0) {
-          console.log(i);
+          continue;
         }
+        console.log(i);
       }
+
+      //   2.
+
+      //   for (let i = 1; i <= 20; i++) {
+      //     if (i % 2 === 0) {
+      //       console.log(i);
+      //     }
+      //   }
+
+      // for (let i = 2; i <= 20; i += 2) {
+      //   console.log(i);
+      // }
+
+      for (let i = 1; i <= 20; i++) {
+        if (i % 2 !== 0) {
+          continue;
+        }
+        console.log(i);
+      }
+      //
+
       //   3.
       for (let i = 6; i <= 14; i++) {
         console.log(i * 2);
       }
 
       //   4.
-      for (let i = 50; i <= 100; i++) {
-        if (i % 5 === 0) {
-          console.log(i);
-        }
+      //   for (let i = 50; i <= 100; i++) {
+      //     if (i % 5 === 0) {
+      //       console.log(i);
+      //     }
+      //   }
+
+      for (let i = 50; i <= 100; i += 5) {
+        console.log(i);
       }
     </script>
   </body>
