--- a/javascript/Vezba/Functions/index.html
+++ b/javascript/Vezba/Functions/index.html
@@ -6,6 +6,7 @@
     <title>Functions</title>
   </head>
   <body>
+    <p class="napisi"></p>
     <script>
       function function1() {
         console.log("hello");
@@ -13,12 +14,11 @@
       }
 
       function1();
-
       function calcTax(parametar1, tax) {
-        console.log(parametar1 * tax);
+        console.log(parametar1 + tax);
       }
 
-      calcTax(2000, 0.1);
+      calcTax(2000, " demir");
     </script>
   </body>
 </html>
