--- a/javascript/42.cas/index.html
+++ b/javascript/42.cas/index.html
@@ -23,6 +23,8 @@
     <p id="result"></p>
 
     <input type="text" id="tekst" />
+
+    <button id="pokreni">Prompt</button>
     <p id="godine"></p>
     <script src="./app.js"></script>
   </body>
