Vezbanje-Advanced Functions

--- a/javascript/43.cas/index.html
+++ b/javascript/43.cas/index.html
@@ -12,8 +12,8 @@
         height: 200px;
         padding: 10px;
       }
-      .card2 {
-      }
+      /* .card2 {
+      } */
     </style>
   </head>
   <body>
