--- a/javascript/Vezba/Advanced functions/index.html
+++ b/javascript/Vezba/Advanced functions/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script></script>
+    <button class="dugme">Click</button>
+    <script src="./app.js"></script>
   </body>
 </html>
