--- a/javascript/Vezba/tic tac toe/index.html
+++ b/javascript/Vezba/tic tac toe/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div class="resultJs">
+      <p class="result-text"></p>
+      <button class="restart">Restart</button>
+    </div>
     <div class="wrapper">
       <div class="red">
-        <div class="cell x"></div>
-        <div class="cell circle"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell"></div>
       </div>
       <div class="red">
