Adding Search Bar

--- a/javascript/Domaci zadatak/zaTest/index2.html
+++ b/javascript/Domaci zadatak/zaTest/index2.html
@@ -8,16 +8,21 @@
       .content {
         display: flex;
         flex-wrap: wrap;
+        gap: 1em;
+        margin-top: 1em;
       }
       .card {
         border: 2px solid black;
         border-radius: 5px;
         width: 250px;
-        height: 100px;
+        height: 150px;
+        padding: 8px 12px;
       }
     </style>
   </head>
   <body>
+    <input type="text" class="searchBar" />
+    <button class="button">Search</button>
     <div class="content">
       <!-- <div class="card">
         <p class="quote"></p>
