--- a/javascript/Vezba/javascript-amazon-project-main/amazon.html
+++ b/javascript/Vezba/javascript-amazon-project-main/amazon.html
@@ -58,8 +58,8 @@
     <div class="main">
       <div class="products-grid"></div>
     </div>
-    <script src="data/cart.js"></script>
     <script src="data/products.js"></script>
-    <script src="./scripts/amazon.js"></script>
+    <!-- type="module" omogucava importanje varijabli iz drugih fajlova -->
+    <script type="module" src="./scripts/amazon.js"></script>
   </body>
 </html>
