--- a/react/Vezbanje/tic-tac-toe/index.html
+++ b/react/Vezbanje/tic-tac-toe/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="root"></div>
+    <div id="root"></div>
   </body>
 </html>
