--- a/react/Vezbanje/index.html
+++ b/react/Vezbanje/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <!-- Don't use this in production: -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div id="root"></div>
+    <script src="./app.js" type="text/babel"></script>
   </body>
 </html>
