--- a/react/vite-project/index.html
+++ b/react/vite-project/index.html
@@ -11,3 +11,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<img src="./slike/joseph-gonzalez-iFgRcqHznqg-unsplash.jpg" alt="">
